Pagina Web de LevelTech

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Esta seccion es la cabecera de la pagina WEB la cual tendra logo y barra de navegacion. -->
     <header>
         <!-- LOGO -->
-        <a href="#" class="logo"> LevelTech</a>
+        <a href="#" class="logo"> Lic. en Sistemas - Hoel Gaitan</a>
 
         <!-- TRUCO PARA QUE EL BOTON SEA CLICKEBLE SIN USR JAVASCRIPT -->
         <input type="checkbox" name="checkbox" id="menu-toggle">
